<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="?colorOnPrimary"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp">


        <TextView
            android:id="@+id/Main_Day"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="?colorPrimary"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period1"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_Day"
            android:background="?colorSecondary"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/period_1"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period2"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period1"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_2"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period3"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period2"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_3"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period4"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period3"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_4"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period5"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period4"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_5"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period6"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period5"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_6"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_period7"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/Main_period6"
            android:fontFamily="@font/cambo"
            android:gravity="center_horizontal|center_vertical"
            android:background="?colorSecondary"
            android:text="@string/period_7"
            android:textAlignment="center"
            android:textColor="@color/Blue1"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>