<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/gradient">

    <ImageView

        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="371dp"
        app:srcCompat="@drawable/tt_logo" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:text="@string/welcome_nto"
        android:textSize="55sp"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_marginTop="0dp"
        android:gravity="center"

        android:text="@string/timely"
        android:textSize="70sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>

    <Button
        android:id="@+id/LogInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/log_in"
        android:textSize="25sp" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppName"
        android:layout_alignParentEnd="true"

        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/sign_up"
        android:textSize="25sp" />
</RelativeLayout>