<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/Blue3"
    app:cardCornerRadius="15dp"
    app:cardElevation="6dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/Period"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/period"
            android:fontFamily="@font/cambo"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/Period"
            android:gravity="center"
            android:text="@string/time"
            android:fontFamily="@font/cambo"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Subject"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/Time"
            android:gravity="center"
            android:text="@string/subject"
            android:fontFamily="@font/cambo"
            android:textColor="@color/Blue1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Teacher"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:fontFamily="@font/cambo"
            android:textColor="@color/Blue1"
            android:text="@string/teacher"
            android:layout_toEndOf="@+id/Subject"
            android:textSize="20sp"
             />


    </RelativeLayout>

</androidx.cardview.widget.CardView>