<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FulTTFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/refresh">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listview"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <TextView
            android:id="@+id/ftt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="?colorSecondaryVariant"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/full_time_table"
            android:textColor="@color/white"
            android:textSize="40sp"

            />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/ftt"
            android:layout_marginTop="30dp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardElevation="6dp"
                    app:cardBackgroundColor="?colorPrimary"
                    android:id="@+id/Header"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:padding="5dp"

                        >


                        <TextView
                            android:id="@+id/Day"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/day"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Period1"
                            android:layout_width="170dp"
                            android:layout_height="34dp"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/Day"
                            android:fontFamily="@font/poppins_medium"
                            android:text="@string/_1"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/Period2"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/Period1"
                            android:text="@string/_2"
                            android:fontFamily="@font/poppins_medium"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                        <TextView
                            android:id="@+id/Period3"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_3"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:layout_toEndOf="@+id/Period2"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                        <TextView
                            android:id="@+id/Period4"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_4"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:layout_toEndOf="@+id/Period3"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>
                        <TextView
                            android:id="@+id/Period5"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/white"
                            android:text="@string/_5"
                            android:fontFamily="@font/poppins_medium"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:layout_toEndOf="@+id/Period4"
                            android:textStyle="bold"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/Period6"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/Period5"
                            android:text="@string/_6"
                            android:fontFamily="@font/poppins_medium"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_centerVertical="true" />

                        <TextView
                            android:id="@+id/Period7"
                            android:layout_width="170dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@+id/Period6"
                            android:text="@string/_7"
                            android:fontFamily="@font/poppins_medium"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_centerVertical="true" />




                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/full_TT_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/Header"
                    tools:itemCount="5"
                    tools:listitem="@layout/full_tt_view_design" />
            </RelativeLayout>

        </HorizontalScrollView>


    </RelativeLayout>

</FrameLayout>