<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NotesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Blue4"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/NotesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/Blue3"
            android:fontFamily="@font/arima_madurai_bold"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/notes"
            android:textColor="@color/Blue1"
            android:textSize="40sp"
            />

        <EditText
            android:id="@+id/add_note_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/add_short_notes"
            android:layout_marginTop="20dp"
            />

        <Button
            android:textColor="@color/white"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_note"
            android:drawableLeft="@drawable/ic_baseline_note_add_24"
            android:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/add_note_view"
            app:layout_constraintTop_toBottomOf="@id/NotesHeading" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:padding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_note_view" />

    </LinearLayout>

</FrameLayout>